Model check stub
