# api/docs/swagger.yaml
@@ -374,6 +374,38 @@ info:
   contact: {}
 paths:
   /admin/users:
+    get:
+      description: |-
+        __Admin role required__
+        List all users for the API.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User created
+          schema:
+            $ref: '#/definitions/JSendSuccess-map_string_string'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/JSendFailure-ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/JSendFailure-ErrorResponse'
+        "403":
+          description: Non-admin user
+          schema:
+            $ref: '#/definitions/JSendFailure-ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/JSendError'
+      security:
+      - Bearer: []
+      summary: Get all users
+      tags:
+      - Admin
     post:
       description: |-
         __Admin role required__
