# api/internal/controller/admincontroller/admin.go
@@ -3,7 +3,6 @@ package admincontroller
 import (
 	"errors"
 	"fmt"
-	"net/http"
 	"precisiondosing-api-go/cfg"
 	"precisiondosing-api-go/internal/handle"
 	"precisiondosing-api-go/internal/model"
@@ -242,11 +241,11 @@ func (ac *AdminController) CreateUser(c *gin.Context) {
 // @Description	List all users for the API.
 // @Tags			Admin
 // @Produce		json
-// @Success		200		{object}	handle.jsendSuccess[map[string]string]			"User created"
-// @Failure		400		{object}	handle.jsendFailure[handle.errorResponse]		"Bad request"
-// @Failure		401		{object}	handle.jsendFailure[handle.errorResponse]		"Unauthorized"
-// @Failure		403		{object}	handle.jsendFailure[handle.errorResponse]		"Non-admin user"
-// @Failure		500		{object}	handle.jSendError								"Internal server error"
+// @Success		200	{object}	handle.jsendSuccess[map[string]string]		"User created"
+// @Failure		400	{object}	handle.jsendFailure[handle.errorResponse]	"Bad request"
+// @Failure		401	{object}	handle.jsendFailure[handle.errorResponse]	"Unauthorized"
+// @Failure		403	{object}	handle.jsendFailure[handle.errorResponse]	"Non-admin user"
+// @Failure		500	{object}	handle.jSendError							"Internal server error"
 //
 // @Security		Bearer
 //
